# easy-tft-simulator

./: DPS_FORMULAS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
scripts/: generate-cast-specs.cjs  generate-icon.py
src/: App.css  App.tsx  main.tsx  state.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  tft_cache.rs  tft_fetch.rs
src/__tests__/: dps.test.ts  modifier.test.ts  normalize.test.ts  real-set17.test.ts  timeline.test.ts
src/components/: AbilityDetail.tsx  ChampionSelector.tsx  DpsBreakdownTable.tsx  DpsSummary.tsx  DpsTimelineChart.tsx  ItemSlots.tsx  LoadoutCompareBar.tsx  StarLevelButtons.tsx  StatTable.tsx  TargetConfig.tsx  TraitPanel.tsx
src/data/: ability-effects.ts  fetcher.ts  index.ts  item-effects.ts  normalize.ts  traitModifierKind.ts  types.ts
src/engine/: autoAttack.ts  dps.ts  index.ts  modifier.ts  spell.ts  target.ts  timeline.ts  tuning.ts
