[package]
name = "dps-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "dps_app_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
dirs = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
